--- a/index.html
+++ b/index.html
@@ -221,21 +221,21 @@
               </div>
             </div>
             <!-- Contact Us section -->
-            <div class="col-md-5">
+            <div class="contact">
                 <h3>Contact Us</h3>
                 <!-- Contact form -->
                 <form>
                     <fieldset class="form-group">
                         <!-- Email input field -->
-                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email" style="height:30px;font-size:10pt;">
                     </fieldset>
                     <!-- Message text area -->
                     <fieldset class="form-group">
-                        <textarea class="form-control" id="exampleMessage" placeholder="Message"></textarea>
+                        <textarea class="form-control" id="exampleMessage" placeholder="Message" style="height:50px;font-size:10pt;"></textarea>
                     </fieldset>
                     <!-- Submit button -->
-                    <fieldset class="form-group text-xs-right">
-                        <button type="button">Send</button>
+                    <fieldset class="form-groupsend" style="border:10px;font-size:14pt;background-color:#604233;">
+                        <button type="button" style="height: 25px; width: 100px; font-size: 15px; background-color: bisque;">Send</button>
                     </fieldset> 
                 </form>
             </div>
